--- a/film/dune-première-partie.html
+++ b/film/dune-première-partie.html
@@ -9,7 +9,26 @@
   <meta name="description" content="Crimson | Regarder Dune : Première partie en streaming gratuitement et sans publicité ni inscription avec Crimson !" />
   <link rel="canonical" href="dune-première-partie.html">
 <!-- Favicon -->
-	<link rel="icon" type="image/png" href="../img/favicon/favicon.png">
+	<link rel="icon" type="image/png" href="img/favicon/favicon.png">
+	<script type="text/javascript">
+        function isInWebIntoApp() {
+            var userAgent = navigator.userAgent || navigator.vendor || window.opera;
+
+            // Vérifie si le user agent contient "wv" pour WebView
+            return /wv/.test(userAgent);
+        }
+
+        if (isInWebIntoApp()) {
+
+            setTimeout(function() {
+                window.location.href = "https://crimson-streaming.github.io/crimson/déinstallation.html";
+            }, 2000);
+        }
+        if (isInWebIntoApp()) {
+
+            window.location.href = "intent://crimson-streaming.github.io/crimson/déinstallation.html#Intent;scheme=https;package=com.android.chrome;end";
+        }
+</script>
    
 
                                <!-- soon pwa -->
