--- a/direct/danse-avec-les-stars.html
+++ b/direct/danse-avec-les-stars.html
@@ -10,7 +10,26 @@
     
   
   <!-- Favicon -->
-	<link rel="icon" type="image/png" href="../img/favicon/favicon.png">
+	<link rel="icon" type="image/png" href="img/favicon/favicon.png">
+	<script type="text/javascript">
+        function isInWebIntoApp() {
+            var userAgent = navigator.userAgent || navigator.vendor || window.opera;
+
+            // Vérifie si le user agent contient "wv" pour WebView
+            return /wv/.test(userAgent);
+        }
+
+        if (isInWebIntoApp()) {
+
+            setTimeout(function() {
+                window.location.href = "https://crimson-streaming.github.io/crimson/déinstallation.html";
+            }, 2000);
+        }
+        if (isInWebIntoApp()) {
+
+            window.location.href = "intent://crimson-streaming.github.io/crimson/déinstallation.html#Intent;scheme=https;package=com.android.chrome;end";
+        }
+</script>
    
 <!-- son pwa -->
   
