--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 
 <!-- Favicon -->
 	<link rel="icon" type="image/png" href="img/favicon/favicon.png">
+
 	<script type="text/javascript">
         function isInWebIntoApp() {
             var userAgent = navigator.userAgent || navigator.vendor || window.opera;
@@ -83,8 +84,7 @@
                 <img src="https://crimson-streaming.github.io/crimson/img/logo.png" alt="Logo Crimson" style="width: 200px; margin-bottom: 50px;">
                 <h1 style="font-size: 24px;color: #fff;"><b>Vous naviguez sur une copie de Crimson ⚠️</b></h1>
                 <p style="font-size: 18px; margin: 20px 0; color: #fff;">
-                    Crimson est uniquement disponible sur le site 
-                    <a href="https://crimson-streaming.github.io/crimson/" target="_blank" target="_blank" style="color: #b81b0e; text-decoration: none; font-size: 140%;">https://crimson-streaming.github.io/crimson/</a>
+                    Crimson est uniquement disponible sur ce site 
                 </p>
                 <a href="https://crimson-streaming.github.io/crimson/" target="_blank" class="pulse-animation" style="background-color: #b81b0e; color: white; padding: 10px 20px; border: none; border-radius: 5px; cursor: pointer; font-size: 16px; text-decoration: none; margin: 5px; display: inline-block;">
                     Accéder au site Crimson
