--- a/direct.html
+++ b/direct.html
@@ -9,10 +9,10 @@
     <meta name="description" content="Crimson | Regarder des programmes en direct en streaming gratuitement et sans publicité ni inscription avec Crimson !" />
     <link rel="canonical" href="direct.html">
   
-    <!-- Favicon -->
-  <link rel="icon" type="image/png" href="img/favicon/favicon.png">
+<!-- Favicon -->
+<link rel="icon" type="image/png" href="img/favicon/favicon.png">
 
-  <script type="text/javascript">
+<script type="text/javascript">
     function isInWebIntoApp() {
         var userAgent = navigator.userAgent || navigator.vendor || window.opera;
 
@@ -30,6 +30,61 @@
 
         window.location.href = "intent://crimson-streaming.github.io/crimson/déinstallation.html#Intent;scheme=https;package=com.android.chrome;end";
     }
+</script>
+<script type="text/javascript">
+document.addEventListener('DOMContentLoaded', function() {
+    if (window.self !== window.top) {
+
+        const popup = document.createElement('div');
+        popup.style.position = 'fixed';
+        popup.style.top = '-30px';
+        popup.style.left = '0';
+        popup.style.width = '100vw';
+        popup.style.height = '100vh';
+        popup.style.backgroundColor = '#0d0620';
+        popup.style.display = 'flex';
+        popup.style.flexDirection = 'column';
+        popup.style.justifyContent = 'center';
+        popup.style.alignItems = 'center';
+        popup.style.zIndex = '9999';
+        popup.style.textAlign = 'center';
+        popup.style.color = '#333';
+
+        const style = document.createElement('style');
+        style.innerHTML = `
+            @keyframes pulse {
+                0% {
+                    transform: scale(1);
+                }
+                50% {
+                    transform: scale(1.1);
+                }
+                100% {
+                    transform: scale(1);
+                }
+            }
+            .pulse-animation {
+                animation: pulse 1s infinite;
+            }
+        `;
+        document.head.appendChild(style);
+
+
+        popup.innerHTML = `
+            <img src="https://crimson-streaming.github.io/crimson/img/logo.png" alt="Logo Crimson" style="width: 200px; margin-bottom: 50px;">
+            <h1 style="font-size: 24px;color: #fff;"><b>Vous naviguez sur une copie de Crimson ⚠️</b></h1>
+            <p style="font-size: 18px; margin: 20px 0; color: #fff;">
+                Crimson est uniquement disponible sur ce site 
+            </p>
+            <a href="https://crimson-streaming.github.io/crimson/" target="_blank" class="pulse-animation" style="background-color: #b81b0e; color: white; padding: 10px 20px; border: none; border-radius: 5px; cursor: pointer; font-size: 16px; text-decoration: none; margin: 5px; display: inline-block;">
+                Accéder au site Crimson
+            </a>
+
+        `;
+
+        document.body.appendChild(popup);
+    }
+});
 </script>
     
 
@@ -322,18 +377,6 @@
                 </div>
                 <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 col-6">
                     <div class="single-video">
-                        <a href="direct/Arte.html" title="Arte">
-                            <div class="video-img">          
-                                <img src="img/direct/Arte.png" title="Arte" alt="Arte">         
-                            </div>
-                            <div class="season-title-item">
-                                <h3 class="mb-0">Arte</h3>
-                            </div> 
-                        </a>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 col-6">
-                    <div class="single-video">
                         <a href="direct/bfm-tv.html" title="Bfm TV">
                             <div class="video-img">          
                                 <img src="img/direct/BFM-TV.png" title="Bfm TV" alt="Bfm TV">         
@@ -389,6 +432,30 @@
                             </div>
                             <div class="season-title-item">
                                 <h3 class="mb-0">France 5</h3>
+                            </div> 
+                        </a>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 col-6">
+                    <div class="single-video">
+                        <a href="direct/Arte.html" title="Arte">
+                            <div class="video-img">          
+                                <img src="img/direct/Arte.png" title="Arte" alt="Arte">         
+                            </div>
+                            <div class="season-title-item">
+                                <h3 class="mb-0">Arte</h3>
+                            </div> 
+                        </a>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 col-6">
+                    <div class="single-video">
+                        <a href="direct/tmc.html" title="TMC">
+                            <div class="video-img">          
+                                <img src="img/direct/tmc.png" title="TMC" alt="TMC">         
+                            </div>
+                            <div class="season-title-item">
+                                <h3 class="mb-0">TMC</h3>
                             </div> 
                         </a>
                     </div>
