--- a/film/barbare.html
+++ b/film/barbare.html
@@ -205,7 +205,7 @@
       </div>
       <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 mt-4 mb-5">
         <video id="player" playsinline controls preload="auto" poster="../img/film/Barbare/Barbare-slider.jpg">
-          <source src="https://mayi22140.mayicloud.com/files/aa/Ygn5E8HJDHQlnMdXJuNNvbsx0dbhdjKbz7h.m3u8" type="application/x-mpegURL">
+          <source src="https://trom22140.tromcloud.com/files/aa/Ygn5E8HJDHQlnMdXJuNNvbsx0dbhdjKbz7h.m3u8" type="application/x-mpegURL">
           Nous travaillons activement pour vous offrir ce contenu. Merci de votre patience. ❤️
         </video>
        <!-- JS Imports -->
