--- a/direct.html
+++ b/direct.html
@@ -460,6 +460,18 @@ document.addEventListener('DOMContentLoaded', function() {
                         </a>
                     </div>
                 </div>
+                <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 col-6">
+                    <div class="single-video">
+                        <a href="direct/tfx.html" title="TFX">
+                            <div class="video-img">          
+                                <img src="img/direct/tfx.png" title="TFX" alt="TFX">         
+                            </div>
+                            <div class="season-title-item">
+                                <h3 class="mb-0">TFX</h3>
+                            </div> 
+                        </a>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
