--- a/direct.html
+++ b/direct.html
@@ -472,6 +472,18 @@ document.addEventListener('DOMContentLoaded', function() {
                         </a>
                     </div>
                 </div>
+                <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 col-6">
+                    <div class="single-video">
+                        <a href="direct/c-news.html" title="C NEWS">
+                            <div class="video-img">          
+                                <img src="img/direct/cnews.png" title="C NEWS" alt="C NEWS">         
+                            </div>
+                            <div class="season-title-item">
+                                <h3 class="mb-0">C NEWS</h3>
+                            </div> 
+                        </a>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
