--- a/index.html
+++ b/index.html
@@ -149,6 +149,7 @@
 										<li><a href="index.html" class="" title="home">Home</a></li>
 										<li><a href="films.html" class="Active" title="Films">Films</a></li>
 										<li><a href="direct.html" class="" title="En direct">En direct</a>
+										<li><a href="recrutement.html" class="" title="Recrutement">Recrutement</a>
 										<ul class="dm-align-2 mega-list"> </ul>
 								</div>
 							</div>
