--- a/recrutement.html
+++ b/recrutement.html
@@ -127,10 +127,8 @@
         </div>
       </div>
     </div>
-  </div>
+</div>
 <!-- End Breadcrumb --> 
-
-<!-- Banner -->
 
 <!-- Start Details Info Page -->
 <div class="details-page-area vfx-item-ptb vfx-item-info">
@@ -138,9 +136,8 @@
     <div class="row">
       <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
         <div class="details-item-block">
-          
-            <p><iframe style="min-height: 700px;" src="https://docs.google.com/forms/d/e/1FAIpQLSc41C1T8fawbCqw7hvYfsxdkGMLVTWwZKefqxuTHqxRVDRr_w/viewform?usp=sf_link" width="100%" height="100%" frameborder="0" marginwidth="0" marginheight="0" allowfullscreen=""></iframe></p>
-
+          <p>Crimson est sur le point de se lancer, et nous recherchons des personnes motivées prêtes à contribuer bénévolement pour faire de cette plateforme de streaming un véritable succès ! Que vous soyez développeur ou non-développeur, si vous avez des compétences en développement web, en gestion de contenu, en marketing digital, ou dans d'autres domaines pertinents, votre expertise est la bienvenue.</p>
+          <p><iframe style="min-height: 700px;" src="https://docs.google.com/forms/d/e/1FAIpQLSc41C1T8fawbCqw7hvYfsxdkGMLVTWwZKefqxuTHqxRVDRr_w/viewform?usp=sf_link" width="100%" height="100%" frameborder="0" marginwidth="0" marginheight="0" allowfullscreen=""></iframe></p>
         </div>
       </div>
     </div>
