--- a/direct/boruto.html
+++ b/direct/boruto.html
@@ -295,7 +295,7 @@
  <script type="text/javascript">
     document.addEventListener('DOMContentLoaded', () => {
         const player = new Plyr('#player', {
-            controls: ['play-large', 'play', 'progress', 'current-time', 'mute', 'volume', 'pip', 'fullscreen'],
+           controls:['play-large', 'play', 'progress', 'current-time', 'mute', 'volume', 'airplay', 'pip', 'fullscreen', 'cast'],
             quality: { default: 720, options: [720] },
             playsinline: true,
             disableContextMenu: true,
