--- a/rerr.html
+++ b/rerr.html
@@ -325,9 +325,9 @@
             <script>
                 function ajouterFilmTelechargement() {
                     const film = {
-                        nom: "Nowhere",
-                        url: "http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4",
-                        affiche: "img/film/Nowhere/Nowhere-slider.jpg",
+                        nom: "ttest",
+                        url: "https://thetestdata.com/assets/video/mp4/480/1MB_480P_THETESTDATA.COM_mp4.mp4",
+                        affiche: "img/film/Nowhere/Nowhere-affiche.jpg",
                         etat: "En attente de téléchargement"
                     };
         
