--- a/direct/danse-avec-les-stars.html
+++ b/direct/danse-avec-les-stars.html
@@ -145,17 +145,18 @@
 <!-- son pwa -->
   
   
-    <!-- LOAD LOCAL CSS -->
-  <link rel="stylesheet" href="../css/bootstrap.min.css">
-  <link rel="stylesheet" href="../css/megamenu.css">
-  <link rel="stylesheet" href="../css/style-three.css" id="theme">
-  <link rel="stylesheet" href="../css/ionicons.css">
-  <link rel="stylesheet" href="../css/font-awesome.min.css">
-  <link rel="stylesheet" href="../css/responsive.css">
-  <link rel="stylesheet" href="../css/splide.min.css">
-  <link rel="stylesheet" href="../css/player-crimson.css">
-  <link rel="stylesheet" href="../css/jquery-eu-cookie-law-popup.css">
-  <link rel="stylesheet" href="../css/search.css">
+     <!-- LOAD LOCAL CSS -->
+     <link rel="stylesheet" href="../css/bootstrap.min.css">
+     <link rel="stylesheet" href="../css/megamenu.css">
+     <link rel="stylesheet" href="../css/style-three.css" id="theme">
+     <link rel="stylesheet" href="../css/ionicons.css">
+     <link rel="stylesheet" href="../css/font-awesome.min.css">
+     <link rel="stylesheet" href="../css/responsive.css">
+     <link rel="stylesheet" href="../css/splide.min.css">
+     <link rel="stylesheet" href="../css/player-crimson.css">
+     <link rel="stylesheet" href="../css/jquery-eu-cookie-law-popup.css">
+     <link rel="stylesheet" href="../css/search.css">
+     <link rel="stylesheet" href="../css/validatesecurity.css">
  
 
     <!-- Player -->
