--- a/direct/Arte.html
+++ b/direct/Arte.html
@@ -154,7 +154,7 @@
   <link rel="stylesheet" href="../css/player-crimson.css">
   <link rel="stylesheet" href="../css/jquery-eu-cookie-law-popup.css">
   <link rel="stylesheet" href="../css/search.css">
-  <link rel="stylesheet" href="../css/search.css">
+  <link rel="stylesheet" href="../css/validatesecurity.css">
  
 
     <!-- Player -->
