--- a/direct/xilam.html
+++ b/direct/xilam.html
@@ -156,7 +156,7 @@
   <link rel="stylesheet" href="../css/player-crimson.css">
   <link rel="stylesheet" href="../css/jquery-eu-cookie-law-popup.css">
   <link rel="stylesheet" href="../css/search.css">
-  <link rel="stylesheet" href="../css/search.css">
+  <link rel="stylesheet" href="../css/validatesecurity.css">
  
 
     <!-- Player -->
