--- a/film/les-segpa.html
+++ b/film/les-segpa.html
@@ -98,7 +98,7 @@
   <link rel="stylesheet" href="../css/player-crimson.css">
   <link rel="stylesheet" href="../css/jquery-eu-cookie-law-popup.css">
   <link rel="stylesheet" href="../css/search.css">
-  <link rel="stylesheet" href="../css/search.css">
+  <link rel="stylesheet" href="../css/validatesecurity.css">
  
      
 
@@ -117,8 +117,23 @@
 
     .search .search-input input[type=text]::placeholder, .search .search-input input[type=text].focus {
         background: #0d071e !important;
-    }
-</style>
+    } .vibrating-button {
+            padding: 10px 16px;
+            background-color: #b81b0e;
+            color: white;
+            border: none;
+            font-size: 16px;
+            border-radius: 14px;
+            transition: background-color 0.3s ease, transform 0.2s;
+            cursor: pointer;
+            margin-top: 0px;
+            margin-bottom: 35px;
+        }
+
+        .vibrating-button:hover {
+            background-color: #b81b0e !important;
+            transform: scale(1.05);
+        }</style>
 </head>
 <body>
 <header>
