--- a/téléchargement.html
+++ b/téléchargement.html
@@ -6,18 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color" content="#b81b0e">
     <meta name="author" content="Crimson">
-    <title>Crimson - LE site de streaming</title>
+    <title>téléchargement | Crimson - LE site de streaming</title>
     <meta name="description" content="Avec Crimson, profitez des derniers films et séries en VF HD, gratuitement et sans aucune publicité ! Ce qui ressemble à un rêve devient une réalité grâce à la révolution Crimson !" />
-    <meta property="og:title" content="Crimson - LE site de streaming" />
-    <meta property="og:description" content="Avec Crimson, profitez des derniers films et séries en VF HD, gratuitement et sans aucune publicité ! Ce qui ressemble à un rêve devient une réalité grâce à la révolution Crimson !" />
-    <meta property="og:image" content="https://crimson-streaming.github.io/crimson/img/assets/og-image.png" />
-    <meta property="og:url" content="https://crimson-streaming.github.io/crimson/" />
-    <meta property="og:site_name" content="Crimson">
-    <meta property="twitter:title" content="Crimson - LE site de streaming" />
-    <meta property="twitter:url" content="https://crimson-streaming.github.io/crimson/" />
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:image" content="https://crimson-streaming.github.io/crimson/img/assets/og-image.png">
-    <link rel="image_src" href="https://crimson-streaming.github.io/crimson/img/assets/og-image.png">
+
     <link rel="icon" type="image/png" href="img/favicon/favicon.png">
     
     <!-- Stylesheets -->
