--- a/404.html
+++ b/404.html
@@ -122,7 +122,7 @@
                                     <ul class="nav vfx-item-nav">
                                         <li><a  href="https://crimson-streaming.github.io/crimson/" class="" title="home">Home</a></li>
                                         <li><a href="https://crimson-streaming.github.io/crimson/films.html" class="Active" title="Films">Films</a></li>
-                                        <li style="border-bottom: 0px solid !important;"><a href=https://crimson-streaming.github.io/crimson/"direct.html" class="" title="En direct">En direct</a>
+                                        <li style="border-bottom: 0px solid !important;"><a href=https://crimson-streaming.github.io/crimson/direct.html" class="" title="En direct">En direct</a>
                                             <ul class="dm-align-2 mega-list"> </ul>
                                     </div>
                                 </div>
