--- a/téléchargement.html
+++ b/téléchargement.html
@@ -168,12 +168,11 @@ function lancerTelechargement() {
     downloadButton.disabled = true;
     downloadInfo.textContent = "Téléchargement en cours...";
 
-    // Initialiser la requête
+    // Nouvelle requête pour le téléchargement
     const xhr = new XMLHttpRequest();
     xhr.open("GET", film.url, true);
     xhr.responseType = "blob";
 
-    // Suivre la progression
     xhr.onprogress = function (event) {
         if (event.lengthComputable) {
             const pourcentage = (event.loaded / event.total) * 100;
@@ -182,42 +181,40 @@ function lancerTelechargement() {
         }
     };
 
-    // Télécharger le fichier une fois terminé
     xhr.onload = function () {
         if (xhr.status === 200) {
             const blob = xhr.response;
             const url = URL.createObjectURL(blob);
-            const a = document.createElement("a");
-            a.href = url;
-            a.download = `${film.nom}.mp4`;  // Nom du fichier téléchargé
-            a.style.display = "none";
-            document.body.appendChild(a);
-            a.click();
 
-            // Libérer l'URL
-            URL.revokeObjectURL(url);
-            document.body.removeChild(a);
+            // Utilisation d'un délai pour forcer le téléchargement sur mobile
+            setTimeout(() => {
+                const a = document.createElement("a");
+                a.href = url;
+                a.download = `${film.nom}.mp4`;  // Nom du fichier téléchargé
+                document.body.appendChild(a);
+                a.click();
 
-            // Mettre à jour le statut dans localStorage
-            downloadInfo.textContent = "Téléchargement terminé !";
-            films[films.length - 1].etat = "Téléchargement terminé !";
-            localStorage.setItem("filmsTelecharges", JSON.stringify(films));
-            downloadButton.textContent = "Téléchargement terminé";
-            downloadButton.disabled = false;
+                // Libérer l'URL et nettoyer
+                URL.revokeObjectURL(url);
+                document.body.removeChild(a);
+
+                downloadInfo.textContent = "Téléchargement terminé !";
+                films[films.length - 1].etat = "Téléchargement terminé !";
+                localStorage.setItem("filmsTelecharges", JSON.stringify(films));
+                downloadButton.textContent = "Téléchargement terminé";
+                downloadButton.disabled = false;
+            }, 100);
         } else {
             downloadInfo.textContent = "Erreur lors du téléchargement.";
             downloadButton.disabled = false;
         }
     };
 
-    // Gérer les erreurs
     xhr.onerror = function () {
-        console.error("Erreur lors du téléchargement :", xhr.statusText);
         downloadInfo.textContent = "Erreur lors du téléchargement.";
         downloadButton.disabled = false;
     };
 
-    // Lancer la requête
     xhr.send();
 }
 
