--- a/test.html
+++ b/test.html
@@ -340,7 +340,7 @@
                 function ajouterFilmTelechargement() {
                     const film = {
                         nom: "Nowhere",
-                        url: "http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4",
+                        url: "5.04-MB.mp4",
                         affiche: "img/film/Nowhere/Nowhere-affiche.jpg",
                         etat: "En attente de téléchargement"
                     };
