--- a/dowload/test.html
+++ b/dowload/test.html
@@ -332,7 +332,7 @@
               <center>
                 <button class="vibrating-button" onclick="ajouterFilmTelechargement()" style="background-color: #7d7185 !important;">
                     Télécharger le film
-                    <img src="https://images.emojiterra.com/google/noto-emoji/unicode-15/animated/1f48e.gif" alt="Gem" class="gem-icon">
+                    <img src="img/assets/image-removebg-preview.png"alt="gem" class="gem-icon">
                 </button>
             </center>
         
