--- a/index.html
+++ b/index.html
@@ -698,7 +698,7 @@ async function showSuggestions(query) {
 <script src="js/splide.min.js"></script>
 <script src="js/custom-main.js"></script>
 <script src="js/jquery-eu-cookie-law-popup.js"></script>
-<script src="maintenance.js"></script>
+<script src="js/maintenance.js"></script>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
 <script>
 	// Fonction exécutée lors de l'utilisation du clic droit.
